fix: avoided showing invisible text with font-display's swap

--- a/src/shared/styles/fonts.css
+++ b/src/shared/styles/fonts.css
@@ -1,4 +1,5 @@
 @font-face {
+  font-display: swap;
   font-family: poppins;
   font-style: normal;
   font-weight: 200;
@@ -8,6 +9,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: poppins;
   font-style: normal;
   font-weight: 300;
@@ -17,6 +19,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: poppins;
   font-style: normal;
   font-weight: 400;
@@ -26,6 +29,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: poppins;
   font-style: normal;
   font-weight: 700;
@@ -35,6 +39,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: poppins;
   font-style: normal;
   font-weight: 900;
